--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.24.0",
     "typescript": "^5.0.0",
     "vercel": "^32.0.0",
     "vite": "^5.0.0"
