--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "premium-car-marketplace",
+  "name": "grader-parts-marketplace",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.0.0",
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.30.1",
     "swiper": "^11.0.0",
     "zustand": "^4.0.0"
