--- a/env.example
+++ b/env.example
@@ -4,6 +4,7 @@
 # Security Configuration
 REACT_APP_ENCRYPTION_KEY=your-super-secret-encryption-key-change-this-in-production
 REACT_APP_API_URL=https://your-api-domain.com
+VITE_API_URL=http://localhost:3000/api
 REACT_APP_ENVIRONMENT=development
 
 # Authentication
@@ -21,10 +22,6 @@ REACT_APP_ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
 # Security Headers
 REACT_APP_CSP_POLICY="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https:;"
 REACT_APP_HSTS_MAX_AGE=31536000
-
-# Supabase Configuration
-VITE_SUPABASE_URL=your-supabase-project-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # EmailJS Configuration for 2FA
 VITE_EMAILJS_SERVICE_ID=service_usy9dun
