Fix MySQL connection: Add healthcheck and remove invalid MySQL2 config options

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
     networks:
       - qqe_network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   # Backend API
   backend:
@@ -38,7 +42,8 @@ services:
     ports:
       - "3001:3000"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - qqe_network
     volumes:
