--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MySQL Database
   mysql:
@@ -38,7 +36,7 @@ services:
       COOKIE_SECRET: QqeCookieSecret2025!
       NODE_ENV: production
       PORT: 3000
-      FRONTEND_URL: http://localhost:80
+      FRONTEND_URL: http://frontend:80
     ports:
       - "3001:3000"
     depends_on:
@@ -57,7 +55,7 @@ services:
       dockerfile: Dockerfile
     container_name: qqe_frontend
     environment:
-      VITE_API_URL: http://localhost:3000/api
+      VITE_API_URL: http://backend:3000/api
     ports:
       - "8080:80"
     depends_on:
