--- a/nginx.conf
+++ b/nginx.conf
@@ -5,29 +5,22 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
-
+    
+    sendfile        on;
+    keepalive_timeout  65;
+    
     server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
-
-        # Handle client-side routing
+        listen       80;
+        server_name  localhost;
+        root         /usr/share/nginx/html;
+        index        index.html;
+        
+        # Handle SPA routing
         location / {
             try_files $uri $uri/ /index.html;
         }
-
-        # API proxy to backend
+        
+        # API proxy
         location /api/ {
             proxy_pass http://backend:3000/api/;
             proxy_set_header Host $host;
@@ -35,17 +28,16 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        # Static files caching
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
+        
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        
+        # Gzip compression
+        gzip on;
+        gzip_vary on;
+        gzip_min_length 1024;
+        gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
     }
 }
